# AbominableIntelligence

./: .clang-tidy  .gitignore  .gitmodules  AIMacros.cmake  CMakeLists.txt  SpaceHulk.cpp  requirements.txt
.github/workflows/: test.yml
docs/: Doxyfile
games/: ex1.txt  infect.txt  population.txt
lib/: CMakeLists.txt
lib/Bindings/: CMakeLists.txt
lib/Bindings/src/: Bindings.cpp
lib/Bindings/test/: CMakeLists.txt
lib/Bindings/test/src/: BindingsTest.cpp
lib/Game/: CMakeLists.txt
lib/Game/src/: Actions.cpp  Activity.cpp  Character.cpp  CharacterLocationMatrix.cpp  Event.cpp  InwardSuns.cpp  Location.cpp  Map.cpp  MapElement.cpp
lib/Game/test/: CMakeLists.txt
lib/Game/test/src/: CharacterLocationMatrixTest.cpp  LocationTest.cpp  MapTest.cpp
lib/MachineLearning/: CMakeLists.txt
lib/Utils/: CMakeLists.txt
lib/Utils/src/: FunctionParser.cpp
lib/Utils/test/: CMakeLists.txt
lib/Utils/test/src/: FunctionParserTest.cpp  SizedArrayTest.cpp  (+1 more)
lib/Warhammer/: CMakeLists.txt
lib/Warhammer/src/: Army.cpp  Model.cpp  StatBlock.cpp  W40KAction.cpp  Weapon.cpp
lib/Warhammer/test/: CMakeLists.txt
lib/tree/: CMakeLists.txt
lib/tree/test/: CMakeLists.txt
python/: graphs.py
python/AIBindings/: AIBindings.py  __init__.py
python/plotter/: __init__.py  line_plotter.py
python/test/: AIBindings_test.py  plotter_test.py
python/utils/: __init__.py
scripts/: graphs.py  graphs.sh  repeat.py
tool/: CMakeLists.txt
tool/aifuzzer/: CMakeLists.txt
tool/aifuzzer/src/: Main.cpp
tool/aishell/: CMakeLists.txt
tool/aishell/src/: Main.cpp
(+40 files in other folders)
